--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,31 @@
 </head>
 <body class="bg-black">
 
-  <h1 class="text-3xl font-bold underline text-white">
+    <header class="flex justify-between text-white py-4 px-8">
+
+        <a href="/" class="text-lg font-bold">Logo</a>
+
+        <ul class="hidden md:flex flex-row items-center align-middle gap-4">
+            <li><a href="#" class= "bg-bubble-gum text-midnight py-2 px-4 rounded-md">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+
+        <button class="md:hidden">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5M12 17.25h8.25" />
+          </svg>
+        </button>
+
+    </header>
+
+
+
+
+
+
+
+  <h1 class="text-3xl md:text-6xl lg:text-9xl font-bold underline text-white">
     Hello world!
   </h1>
   
