responsive design using grid

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body class="bg-black">
+<body class="bg-blue">
 
     <header class="flex justify-between text-white py-4 px-8">
 
@@ -28,15 +28,41 @@
 
     </header>
 
+    <div class="container">
+      
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4  gap-4">
 
+        <div class="bg-white rounded-md px-4 py-4 border-2 border-r-emerald-500">
+          <h2 class="tracking-widest text-xs mb-1">Category</h2>
+          <h1 class="title-font text-lg text-silver mb-3 text-midnight">TAILWIND CSS</h1>
+          <p class="text-relaxed text-sm mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus harum consequatur velit reiciendis quisquam dolor aut veritatis consectetur maxime rerum.</p>
+          <button class="bg-blue text-sm text-white rounded-md px-4 py-1">Click Me</button>
+        </div>
 
+        <div class="bg-white rounded-md px-4 py-4 border-2 border-r-emerald-500">
+          <h2 class="tracking-widest text-xs mb-1">Category</h2>
+          <h1 class="title-font text-lg text-silver mb-3 text-midnight">TAILWIND CSS</h1>
+          <p class="text-relaxed text-sm mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus harum consequatur velit reiciendis quisquam dolor aut veritatis consectetur maxime rerum.</p>
+          <button class="bg-blue text-sm text-white rounded-md px-4 py-1">Click Me</button>
+        </div>
 
+        <div class="bg-white rounded-md px-4 py-4 border-2 border-r-emerald-500">
+          <h2 class="tracking-widest text-xs mb-1">Category</h2>
+          <h1 class="title-font text-lg text-silver mb-3 text-midnight">TAILWIND CSS</h1>
+          <p class="text-relaxed text-sm mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus harum consequatur velit reiciendis quisquam dolor aut veritatis consectetur maxime rerum.</p>
+          <button class="bg-blue text-sm text-white rounded-md px-4 py-1">Click Me</button>
+        </div>
 
+        <div class="bg-white rounded-md px-4 py-4 border-2 border-r-emerald-500">
+          <h2 class="tracking-widest text-xs mb-1">Category</h2>
+          <h1 class="title-font text-lg text-silver mb-3 text-midnight">TAILWIND CSS</h1>
+          <p class="text-relaxed text-sm mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus harum consequatur velit reiciendis quisquam dolor aut veritatis consectetur maxime rerum.</p>
+          <button class="bg-blue text-sm text-white rounded-md px-4 py-1">Click Me</button>
+        </div>
 
+      </div>
 
-  <h1 class="text-3xl md:text-6xl lg:text-9xl font-bold underline text-white">
-    Hello world!
-  </h1>
-  
+    </div>
+
 </body>
 </html>
