small changes done

--- a/src/index.html
+++ b/src/index.html
@@ -9,60 +9,46 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body class="bg-blue">
-
     <header class="flex justify-between text-white py-4 px-8">
-
         <a href="/" class="text-lg font-bold">Logo</a>
-
         <ul class="hidden md:flex flex-row items-center align-middle gap-4">
             <li><a href="#" class= "bg-bubble-gum text-midnight py-2 px-4 rounded-md">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
-
         <button class="md:hidden">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5M12 17.25h8.25" />
           </svg>
         </button>
-
     </header>
-
-    <div class="container">
-      
+    <div class="container p-8">
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4  gap-4">
-
-        <div class="bg-white rounded-md px-4 py-4 border-2 border-r-emerald-500">
+        <div class="bg-white rounded-md px-4 py-4 border-2 border-l-midnight border-r-midnight">
           <h2 class="tracking-widest text-xs mb-1">Category</h2>
-          <h1 class="title-font text-lg text-silver mb-3 text-midnight">TAILWIND CSS</h1>
+          <h1 class="title-font text-lg text-silver mb-3 text-midnight">Vue Js</h1>
           <p class="text-relaxed text-sm mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus harum consequatur velit reiciendis quisquam dolor aut veritatis consectetur maxime rerum.</p>
-          <button class="bg-blue text-sm text-white rounded-md px-4 py-1">Click Me</button>
+          <button class="bg-blue text-sm text-white rounded-md px-4 py-1 customBtn">Read More...</button>
         </div>
-
-        <div class="bg-white rounded-md px-4 py-4 border-2 border-r-emerald-500">
+        <div class="bg-white rounded-md px-4 py-4 border-2 border-l-midnight border-r-midnight">
           <h2 class="tracking-widest text-xs mb-1">Category</h2>
-          <h1 class="title-font text-lg text-silver mb-3 text-midnight">TAILWIND CSS</h1>
+          <h1 class="title-font text-lg text-silver mb-3 text-midnight">React JS</h1>
           <p class="text-relaxed text-sm mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus harum consequatur velit reiciendis quisquam dolor aut veritatis consectetur maxime rerum.</p>
-          <button class="bg-blue text-sm text-white rounded-md px-4 py-1">Click Me</button>
+          <button class="bg-blue text-sm text-white rounded-md px-4 py-1">Read More...</button>
         </div>
-
-        <div class="bg-white rounded-md px-4 py-4 border-2 border-r-emerald-500">
+        <div class="bg-white rounded-md px-4 py-4 border-2 border-l-midnight border-r-midnight">
           <h2 class="tracking-widest text-xs mb-1">Category</h2>
-          <h1 class="title-font text-lg text-silver mb-3 text-midnight">TAILWIND CSS</h1>
+          <h1 class="title-font text-lg text-silver mb-3 text-midnight">Angular JS</h1>
           <p class="text-relaxed text-sm mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus harum consequatur velit reiciendis quisquam dolor aut veritatis consectetur maxime rerum.</p>
-          <button class="bg-blue text-sm text-white rounded-md px-4 py-1">Click Me</button>
+          <button class="bg-blue text-sm text-white rounded-md px-4 py-1">Read More...</button>
         </div>
-
-        <div class="bg-white rounded-md px-4 py-4 border-2 border-r-emerald-500">
+        <div class="bg-white rounded-md px-4 py-4 border-2 border-l-midnight border-r-midnight">
           <h2 class="tracking-widest text-xs mb-1">Category</h2>
-          <h1 class="title-font text-lg text-silver mb-3 text-midnight">TAILWIND CSS</h1>
+          <h1 class="title-font text-lg text-silver mb-3 text-midnight">Tailwind CSS</h1>
           <p class="text-relaxed text-sm mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus harum consequatur velit reiciendis quisquam dolor aut veritatis consectetur maxime rerum.</p>
-          <button class="bg-blue text-sm text-white rounded-md px-4 py-1">Click Me</button>
+          <button class="bg-blue text-sm text-white rounded-md px-4 py-1">Read More...</button>
         </div>
-
       </div>
-
     </div>
-
 </body>
 </html>
